# synergy-applet

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  browse.c  browse.h  main.c  publish.c  publish.h  settings.c  settings.h  synergy-applet.c  synergy-applet.h
